metadata/force-app/main/default/objects/MRR_Report_Snapshot__c/MRR_Report_Snapshot__c.object-meta.xml
<CustomObject>
    <label>MRR Report Snapshot</label>
    <nameField>
        <label>MRR Report Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MRR Report Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>