metadata/force-app/main/default/objects/MRR_Report_Snapshot__c/fields/Account_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_18_digits__c</fullName>
    <description>18-digit Account ID</description>
    <label>Account ID (18 digits)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>