metadata/force-app/main/default/objects/MRR_Report_Snapshot__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MRR Report Snapshots (Account Name)</relationshipLabel>
    <relationshipName>MRR_Report_Snapshots1</relationshipName>
    <type>Lookup</type>
</CustomField>