metadata/force-app/main/default/objects/MRR_Report_Snapshot__c/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <label>Company Size</label>
    <length>80</length>
    <type>Text</type>
</CustomField>