metadata/force-app/main/default/objects/MRR_Report_Snapshot__c/fields/Contract_isActive__c.field-meta.xml
<CustomField>
    <fullName>Contract_isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract isActive</label>
    <type>Checkbox</type>
</CustomField>