metadata/force-app/main/default/objects/MRR_Report_Snapshot__c/fields/Contraction__c.field-meta.xml
<CustomField>
    <fullName>Contraction__c</fullName>
    <label>Contraction</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>