metadata/force-app/main/default/objects/MRR_Report_Snapshot__c/fields/Internal_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Internal_Transfer__c</fullName>
    <label>Internal Transfer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>