metadata/force-app/main/default/objects/MRR_Report_Snapshot__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>