metadata/force-app/main/default/objects/MRR_Report_Snapshot__c/fields/OEM__c.field-meta.xml
<CustomField>
    <fullName>OEM__c</fullName>
    <label>OEM</label>
    <length>32</length>
    <type>Text</type>
</CustomField>