metadata/force-app/main/default/objects/MRR_Report_Snapshot__c/fields/OEM_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>OEM_Partner_Account__c</fullName>
    <label>OEM / Partner Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>