metadata/force-app/main/default/objects/MRR_Report_Snapshot__c/fields/One_off__c.field-meta.xml
<CustomField>
    <fullName>One_off__c</fullName>
    <label>One off</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>