metadata/force-app/main/default/objects/MRR_Report_Snapshot__c/fields/Opportunity_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID_18_digits__c</fullName>
    <label>Opportunity ID (18 digits)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>