metadata/force-app/main/default/objects/MRR_Report_Snapshot__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <length>32</length>
    <type>Text</type>
</CustomField>