metadata/force-app/main/default/objects/MRR_Report_Snapshot__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <label>Renewal</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Currency</type>
</CustomField>