metadata/force-app/main/default/objects/MRR_Report_Snapshot__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>